# earth-visualization

./: .gitignore  CMakeLists.txt  PGR-doc-xondri07.docx  README  README.md  main.cpp  tile_generator.py
include/: camera.h  printing.h  program.h  shader.h
include/glad/: glad.h
shaders/: shader.frag  shader.fs  shader.vert  shader.vs
shaders/sun/: shader.frag  shader.vs
shaders/text/: shader.vert
shaders/tiling/: shader.frag  shader.fs  shader.tesc  shader.tese  shader.vert  shader.vs
src/: Frustum.cpp  Frustum.h  WorldCitiesReader.cpp  WorldCitiesReader.h  ellipsoid.cpp  ellipsoid.h  glad.c  printing.cpp  utils.h  vertex.cpp  vertex.h  window_definition.h
src/cameras/: Camera.h  EarthCenteredCamera.cpp  EarthCenteredCamera.h  FreeCamera.h
src/rendering/: CityNamesRenderer.cpp  CityNamesRenderer.h  EarthRenderer.cpp  EarthRenderer.h  GuiFrameRenderer.cpp  GuiFrameRenderer.h  Renderer.h  RendererSubscriber.cpp  RendererSubscriber.h  RenderingOptions.h  SunRenderer.cpp  SunRenderer.h  TileEarthRenderer.cpp  TileEarthRenderer.h
src/resources/: Prefetcher.cpp  Prefetcher.h  ResourceFetcher.cpp  ResourceFetcher.h  ResourceManager.cpp  ResourceManager.h
src/shaders/: shader.cpp
src/simulation/: LightSource.cpp  LightSource.h  SolarSimulator.cpp  SolarSimulator.h
src/tesselation/: SubdivisionSphereTesselator.cpp  SubdivisionSphereTesselator.h  SubdivisionSurfaces.cpp  SubdivisionSurfaces.h  TileMeshTesselator.cpp  TileMeshTesselator.h
src/textures/: Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/tiling/: Resolution.cpp  Resolution.h  Tile.cpp  Tile.h  TileContainer.cpp  TileContainer.h  TileResources.cpp  TileResources.h
tests/: CMakeLists.txt  ShaderCodeTest.cpp  TextureAtlasTest.cpp  TileMeshTesselatorTest.cpp
